--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
 	<title>Tu wpisz tytuł strony</title>
 </head>
 <body>
-hwdp
-Tu wpisuje się treść strony
 
+Tu wpisuje się treść strony
+	<script>
+	document.write('Hello World');
+		
+
+
+
+	</script>
 </body>
 </html>
