--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 Tu wpisuje się treść strony
 	<script>
 	document.write('Hello World');
-
+	
 		const number1 = parseInt(prompt('wprowadzi liczbe'));
 		const number2 = parseInt(prompt('wprowadzi liczbe'));
 
@@ -24,7 +24,7 @@ Tu wpisuje się treść strony
 		}
 		else (isNaN(number2))
 		{
-			document.write('<p>wynik:'+(number1 + number2)+'/p');	
+			document.write('<p>wynik:'+(number1 + number2)+'</p>');	
 		}
 
 	</script>
