--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@ Tu wpisuje się treść strony
 	const znak = parseInt(prompt('wprowadzi znak'));
 	
 
-		if (znak == '+')
+		if (znak ='+')
 		{
 			document.write('<p>wynik:'+(number1 + number2)+'</p>');	
 		}
-		else if (znak == '-')
+		else if (znak = '-')
 		{
 			document.write('<p>wynik:'+(number1 - number2)+'</p>');	
 		}
-		else if (znak == '*')
+		else if (znak ='*')
 		{
 			document.write('<p>wynik:'+(number1 * number2)+'</p>');	
 		}
-		else if (znak == '/')
+		else if (znak = '/')
 		{
 			document.write('<p>wynik:'+(number1 / number2)+'</p>');	
 		}
