--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ Tu wpisuje się treść strony
 	
 		
 		
-	const number1 = parseInt(prompt('wprowadzi liczbe'));
-	const number2 = parseInt(prompt('wprowadzi liczbe'));
+	let number1 = parseInt(prompt('wprowadzi liczbe'));
+	let number2 = parseInt(prompt('wprowadzi liczbe'));
 	
 	
 	
-	const znak = parseInt(prompt('wprowadzi znak'));
+	let znak = prompt('wprowadzi znak');
 	
 
 		if (znak =='+')
