--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ Tu wpisuje się treść strony
 	
 	
 	
+    
+
 	let znak = prompt('wprowadzi znak');
 	
 
@@ -42,7 +44,7 @@ Tu wpisuje się treść strony
 			const znak = parseInt(prompt('wprowadzi znak'));
 		}
 		
-		
+	//dodaj pętle znaku dopdaj pętle na liczbach dodaj niemnożnosić dzielenia przez 0
 
 	
 	</script>
